crates/uitest/fixtures/ty/def/not_fully_applied.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/def/not_fully_applied.fe
---
error[2-0002]: `T` is not found
   ┌─ not_fully_applied.fe:21:10
   │
21 │ impl Gen<T> {
   │          ^ `T` is not found

error[3-0000]: expected fully applied type
  ┌─ not_fully_applied.fe:7:8
  │
7 │     f: Gen<i32>,
  │        ^^^^^^^^ expected fully applied type here

error[3-0000]: expected fully applied type
   ┌─ not_fully_applied.fe:12:13
   │
12 │     Variant(Gen<i32>, Gen<u32>),
   │             ^^^^^^^^ expected fully applied type here

error[3-0000]: expected fully applied type
   ┌─ not_fully_applied.fe:12:23
   │
12 │     Variant(Gen<i32>, Gen<u32>),
   │                       ^^^^^^^^ expected fully applied type here

error[3-0000]: expected fully applied type
   ┌─ not_fully_applied.fe:13:36
   │
13 │     Variant2{ x: Gen<i32, u32>, y: Gen<u32> },
   │                                    ^^^^^^^^ expected fully applied type here

error[3-0000]: expected fully applied type
   ┌─ not_fully_applied.fe:17:8
   │
17 │     f: Gen<i32>,
   │        ^^^^^^^^ expected fully applied type here

error[3-0000]: expected fully applied type
   ┌─ not_fully_applied.fe:22:12
   │
22 │     fn foo(self) {}
   │            ^^^^ expected fully applied type here

error[3-0000]: expected fully applied type
   ┌─ not_fully_applied.fe:24:18
   │
24 │     fn bar(self: Self) {}
   │                  ^^^^ expected fully applied type here

error[3-0000]: expected fully applied type
   ┌─ not_fully_applied.fe:28:13
   │
28 │ fn foo(gen: Gen) {}
   │             ^^^ expected fully applied type here


